--- a/src/sass/settings/_all.scss
+++ b/src/sass/settings/_all.scss
@@ -1,8 +1,7 @@
-@import "settings/colors";
+@import "./colors";
 
 body {
     font-family: 'Saira Condensed', 'Arial', sans-serif;
     background-color: $background-color1;
-    color: $text-color-black; 
+    color: $text-color-black;
 }
-
