--- a/src/main.scss
+++ b/src/main.scss
@@ -1,10 +1,10 @@
-// @import "general/reset";
-// @import "general/configuration";
+@import "./sass/general/reset";
+@import "./sass/general/configuration";
 
-// @import "settings/all";
-// @import "settings/colors";
+@import "./sass/settings/all";
+@import "./sass/settings/colors";
 
-// @import "sections/navigation";
+@import "./sass/sections/Navigation.scss";
 
 
 // $fa-font-path: "~font-awesome/fonts";
