adding navigation and subpages

--- a/src/main.scss
+++ b/src/main.scss
@@ -5,6 +5,8 @@
 @import "./sass/settings/colors";
 
 @import "./sass/sections/Navigation.scss";
+@import "./sass/sections/Choice.scss";
+@import "./sass/sections/MMdE.scss";
 
 
 // $fa-font-path: "~font-awesome/fonts";
