--- a/src/sass/settings/_colors.scss
+++ b/src/sass/settings/_colors.scss
@@ -2,11 +2,13 @@
 $background-color1: #fff;
 
 // kolory czcionek
-// ciemny niebieski
 $text-color-black: black;
+$text-color-blue: #035eae; 
+$text-color-violet: #6d0091;
+$text-color-white: #fff;  
 
 
-// margin-top: 20vh;
-$margin-sections: 20vh;
+// margin-sections
+$margin-sections: 5vh;
 
 
