--- a/src/sass/general/_configuration.scss
+++ b/src/sass/general/_configuration.scss
@@ -16,7 +16,7 @@ $container-max-width: 1000px;
     padding-left: $gutter;
     padding-right: $gutter;
     position: relative; 
-    background-color: green;
+    // background-color: green;
 
     .row {
         // width: calc(100% + #{2 * $gutter});
