--- a/src/sass/sections/Navigation.scss
+++ b/src/sass/sections/Navigation.scss
@@ -4,19 +4,19 @@
     z-index: 2;
     width: 100%; 
 
+    background-color: $background-color1; 
+
     line-height: 10vh; 
     font-weight: bold;
-    font-size: 1.4rem; 
+    font-size: 1.2rem; 
     // display: flex;
     // align-items: center; 
 
     .row {
         height: 10vh;
-
-        background-color: grey; 
         .navigation__logo {
             display: flex;
-            flex-direction: row-reverse; 
+            justify-content: flex-end; 
             width: 100%;
             height: 100%;
             .logo__image {
@@ -27,8 +27,12 @@
             }
 
         }
-        .navigation__nav {
-            background-color: green; 
+        .nav-list {
+            display: flex; 
+            justify-content: flex-end;
+            .nav__item {
+                padding-right: 20px; 
+            }  
         }
     }
 }
