--- a/src/sass/sections/Choice.scss
+++ b/src/sass/sections/Choice.scss
@@ -7,9 +7,9 @@
 
 .Choice {
     // position: absolute; 
-    height: 75vh;
+    height: 469px;
     width: 100%;
-    margin-top: 10vh; 
+    margin-top: 62.5px; 
 
     // background-image: url('../../assets/images/bg2.jpg');
     // background-repeat: no-repeat;
