Implementing Smooth Scrolling in React

--- a/src/sass/sections/Navigation.scss
+++ b/src/sass/sections/Navigation.scss
@@ -26,8 +26,11 @@
             .logo__text {
                 line-height: 62px; 
             }
-
         }
+        .logo__image:hover {
+            cursor: pointer;
+        }
+
         .nav-list {
             display: flex; 
             justify-content: flex-end;
@@ -37,7 +40,11 @@
 
                 // 
                 letter-spacing: 0.4px; 
-            }  
+            }
+            .nav__item:hover {
+                color: $text-color-blue;
+                cursor: pointer;
+            }
         }
     }
 }
