adding a subpage with a slide

--- a/src/main.scss
+++ b/src/main.scss
@@ -7,6 +7,7 @@
 @import "./sass/sections/Navigation.scss";
 @import "./sass/sections/Choice.scss";
 @import "./sass/sections/MMdE.scss";
+@import "./sass/sections/MMdE_Slider.scss";
 @import "./sass/sections/Chatbot.scss";
 @import "./sass/sections/Contact.scss";
 
