--- a/src/sass/sections/Navigation.scss
+++ b/src/sass/sections/Navigation.scss
@@ -1,12 +1,13 @@
 .navigation {
-    position: fixed; 
-    top:0; 
+    // border-bottom: 1px solid #aaa;
+    position: fixed;
+    top: 0;
     z-index: 5;
-    width: 100%; 
+    width: 100%;
 
-    background-color: $background-color1; 
+    background-color: $background-color1;
 
-    line-height: 62px; 
+    line-height: 62px;
     font-weight: bolder;
     font-size: 1rem;
     // display: flex;
@@ -15,32 +16,45 @@
 
     .row {
         height: 62px;
+
         .navigation__logo {
             display: flex;
-            justify-content: flex-start; 
+            justify-content: flex-start;
             width: 100%;
             height: 100%;
-            .logo__image {
-                height: 100%;
+
+            a {
+                display: flex;
+
+                .logo__image {
+                    height: 100%;
+                }
+
+                .logo__text {
+                    font-weight: bold;
+                    margin-left: 15px;
+                    // line-height: 62px;
+                }
             }
-            .logo__text {
-                line-height: 62px; 
-            }
+
         }
+
         .logo__image:hover {
             cursor: pointer;
         }
 
         .nav-list {
-            display: flex; 
+            display: flex;
             justify-content: flex-end;
+
             .nav__item {
-                font-weight: bold; 
+                font-weight: bold;
                 padding-right: 30px;
 
                 // 
-                letter-spacing: 0.4px; 
+                letter-spacing: 0.4px;
             }
+
             .nav__item:hover {
                 color: $text-color-blue;
                 cursor: pointer;
@@ -48,7 +62,3 @@
         }
     }
 }
-
-
-
-
