--- a/src/sass/sections/Chatbot.scss
+++ b/src/sass/sections/Chatbot.scss
@@ -1,41 +1,45 @@
 .Chatbot {
     height: 469px;
-    margin-top: $margin-sections * 2.5;  
+    margin-top: $margin-sections * 2.5;
     margin-bottom: $margin-sections;
-    
+
 }
+
 .Chatbot__description {
-    letter-spacing: 0.02rem; 
+    letter-spacing: 0.02rem;
     // margin-bottom: $margin-sections * 2; 
 
     .Chatbot__title {
         font-size: 1.8rem;
-        font-weight: bold; 
-        color: $text-color-violet; 
-        padding-bottom: 6px;  
-    }
-    .Chatbot__subtitle {
-        font-size: 1.6rem; 
-        margin-bottom: 20px; 
+        font-weight: bold;
+        color: $text-color-violet;
+        padding-bottom: 6px;
     }
 
-    .Chatbot__title, .Chatbot__subtitle {
-        text-align: center; 
+    .Chatbot__subtitle {
+        font-size: 1.6rem;
+        margin-bottom: 20px;
+    }
+
+    .Chatbot__title,
+    .Chatbot__subtitle {
+        text-align: center;
     }
 }
 
 // 
-.Scheme-second, .Scheme-third {
-    position: relative; 
+.Scheme-second,
+.Scheme-third {
+    position: relative;
     display: flex;
-    flex-direction: column; 
+    flex-direction: column;
     align-items: center;
- 
+
 }
 
 .Scheme-second {
     align-items: flex-end;
-    margin-right: 25px; 
+    margin-right: 25px;
 
     .foto__obramowanie {
         transform: rotate(240deg);
@@ -44,22 +48,22 @@
 
 .Scheme-third {
     align-items: flex-start;
-    margin-left: 25px; 
+    margin-left: 25px;
 
     .Scheme-first__arrows {
-        top: 0px; 
+        top: 0px;
         left: 20px;
-        transform: rotate(40deg)  
+        transform: rotate(40deg)
     }
 
     .foto__obramowanie {
         transform: rotate(120deg);
     }
-} 
+}
 
 .Scheme {
     display: flex;
-    flex-direction: column; 
+    flex-direction: column;
     align-items: center;
 
     // border: 1px solid red;
@@ -69,7 +73,7 @@
     display: inline-block;
     width: 130px;
     height: 60px;
-    text-align: center; 
+    text-align: center;
 
     margin-bottom: -20px;
     margin-top: -25px;
@@ -78,15 +82,17 @@
 }
 
 .Scheme__foto {
-    position: relative;   
+    position: relative;
 
     height: 160px;
-    width: 160px; 
+    width: 160px;
 
     .foto__ikona {
         z-index: 2;
     }
-    .foto__ikona, .foto__obramowanie {
+
+    .foto__ikona,
+    .foto__obramowanie {
         position: absolute;
     }
 }
@@ -97,38 +103,44 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    letter-spacing: 0.02rem; 
+    letter-spacing: 0.02rem;
 
-    margin-top: 6.5px; 
-    margin-bottom: $margin-sections; 
+    margin-top: 6.5px;
+    margin-bottom: $margin-sections;
 
-    span,  button  {
-        color: $text-color-white; 
+    span,
+    button {
+        color: $text-color-white;
         padding: 5px 5px;
-        margin: 2px 0; 
+        margin: 2px 0;
 
         border: 2px solid $text-color-violet;
-        border-radius: 5px; 
+        border-radius: 5px;
         background-color: $text-color-violet;
     }
+
     .text__arrows {
         color: $text-color-violet;
-        font-size: 1.5rem; 
+        font-size: 1.5rem;
         display: flex;
-        flex-direction: column; 
+        flex-direction: column;
 
-        margin-top: $margin-sections / 2; 
+        margin-top: $margin-sections / 2;
+
         // margin-bottom: $margin-sections / 2; 
         .fa:nth-of-type(2) {
             transform: translateY(-10px)
         }
     }
+
     .text__button {
-        font-size: 1rem; 
-        font-weight: 800; 
+        font-size: 1rem;
+        font-weight: 800;
         padding: 10px 25px;
         text-transform: uppercase;
         color: $text-color-violet;
         background-color: $background-color1;
+        margin-top: 15px;
+
     }
 }
