--- a/src/sass/sections/MMdE.scss
+++ b/src/sass/sections/MMdE.scss
@@ -1,8 +1,9 @@
 .MMdE {
     height: 625px;
     // min-height: 100vh;
-    margin-top: $margin-sections; 
+    margin-top: $margin-sections;
 }
+
 .MMdE__description {
     margin-bottom: 40px;
 
@@ -10,28 +11,34 @@
         font-size: 1.8rem;
         // font-size: 22px; 
 
-        font-weight: bold; 
-        color: $text-color-blue; 
-        padding-bottom: 6px; 
-    }
-    .MMdE__subtitle {
-        font-size: 1.6rem; 
-        margin-bottom: 60px; 
+        font-weight: bold;
+        color: $text-color-blue;
+        padding-bottom: 6px;
     }
 
-    .MMdE__title, .MMdE__subtitle {
-        text-align: center; 
+    .MMdE__subtitle {
+        font-size: 1.6rem;
+        margin-bottom: 60px;
+    }
+
+    .MMdE__title,
+    .MMdE__subtitle {
+        text-align: center;
     }
 }
 
 // 
-.Scheme-first, .Scheme-second, .Scheme-third {
-    position: relative; 
+.Scheme-first,
+.Scheme-second,
+.Scheme-third {
+    position: relative;
     display: flex;
-    flex-direction: column; 
+    flex-direction: column;
     align-items: center;
 
-    .Scheme-first__arrows, .Scheme-second__arrows, .Scheme-third__arrows {
+    .Scheme-first__arrows,
+    .Scheme-second__arrows,
+    .Scheme-third__arrows {
         color: $text-color-blue;
         position: absolute;
 
@@ -39,23 +46,26 @@
             transform: translateX(-2px)
         }
     }
+
     // border: 1px solid black; 
 }
+
 .Scheme-first {
     margin-bottom: -40px;
+
     .Scheme-first__arrows {
-        top: 195px;  
+        top: 195px;
     }
 }
 
 .Scheme-second {
     align-items: flex-end;
-    margin-right: 8px!important; 
+    margin-right: 8px !important;
 
     .Scheme-first__arrows {
-        top: -1px!important; 
-        right: 31px!important; 
-        transform: rotate(130deg)  
+        top: -1px !important;
+        right: 31px !important;
+        transform: rotate(130deg)
     }
 
     // border: 1px solid green; 
@@ -66,23 +76,23 @@
 
 .Scheme-third {
     align-items: flex-start;
-    margin-left: 8px!important; 
+    margin-left: 8px !important;
 
     .Scheme-first__arrows {
-        top: -1px!important; 
-        left: 31px!important; 
-        transform: rotate(40deg)  
+        top: -1px !important;
+        left: 31px !important;
+        transform: rotate(40deg)
     }
 
     // border: 1px solid yellow; 
     .foto__obramowanie {
         transform: rotate(120deg);
     }
-} 
+}
 
 .Scheme {
     display: flex;
-    flex-direction: column; 
+    flex-direction: column;
     align-items: center;
 
     // border: 1px solid red;
@@ -92,26 +102,28 @@
     display: inline-block;
     width: 130px;
     height: 60px;
-    text-align: center; 
+    text-align: center;
 
-    letter-spacing: 0.02rem;   
+    letter-spacing: 0.02rem;
     margin-bottom: -20px;
-    margin-top: -38px!important; 
+    margin-top: -38px !important;
 
     // border: 1px solid blue; 
 }
 
 .Scheme__foto {
-    position: relative;  
+    position: relative;
     height: 160px;
-    width: 160px; 
+    width: 160px;
 
     .foto__ikona {
         z-index: 2;
     }
-    .foto__ikona, .foto__obramowanie {
+
+    .foto__ikona,
+    .foto__obramowanie {
         position: absolute;
-        top: -16px; 
+        top: -16px;
     }
 }
 
@@ -121,40 +133,45 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    letter-spacing: 0.02rem;   
+    letter-spacing: 0.02rem;
 
-    margin-top: 19px; 
+    margin-top: 19px;
     // margin-bottom: $margin-sections; 
 
-    span,  .text__button  {
+    span,
+    .text__button {
         // 
         color: $text-color-white;
         background-color: $text-color-blue;
 
         padding: 5px 5px;
-        margin: 2px 0; 
+        margin: 2px 0;
 
         border: 2px solid $text-color-blue;
-        border-radius: 5px; 
-        
+        border-radius: 5px;
+
     }
+
     .text__arrows {
         color: $text-color-blue;
-        font-size: 1.5rem; 
+        font-size: 1.5rem;
         display: flex;
-        flex-direction: column; 
+        flex-direction: column;
 
-        margin-top: $margin-sections /2;  
+        margin-top: $margin-sections /2;
+
         .fa:nth-of-type(2) {
             transform: translateY(-10px)
         }
     }
+
     .text__button {
         color: $text-color-blue;
         background-color: $background-color1;
         text-transform: uppercase;
-        font-weight: 800; 
-        font-size: 1rem; 
+        font-weight: 800;
+        font-size: 1rem;
         padding: 10px 25px;
+        margin-top: 15px;
     }
 }
