add new section

--- a/src/main.scss
+++ b/src/main.scss
@@ -10,7 +10,7 @@
 @import "./sass/sections/MMdE_Slider.scss";
 @import "./sass/sections/Chatbot.scss";
 @import "./sass/sections/Contact.scss";
-
+@import "./sass/sections/Video.scss";
 
 // $fa-font-path: "~font-awesome/fonts";
 // @import "~font-awesome/scss/font-awesome";
