--- a/src/sass/sections/Navigation.scss
+++ b/src/sass/sections/Navigation.scss
@@ -1,5 +1,5 @@
 .navigation {
-    // border-bottom: 1px solid #aaa;
+    box-shadow: 3px 1px 1px 0px rgba(0, 0, 0, 0.2);
     position: fixed;
     top: 0;
     z-index: 5;
