--- a/src/main.scss
+++ b/src/main.scss
@@ -6,8 +6,12 @@
 
 @import "./sass/sections/Navigation.scss";
 @import "./sass/sections/Choice.scss";
+
 @import "./sass/sections/MMdE.scss";
 @import "./sass/sections/MMdE_Slider.scss";
+@import "./sass/sections/MMdE_Chart.scss";
+@import "./sass/sections/MMdE_SubpageThree.scss";
+
 @import "./sass/sections/Chatbot.scss";
 @import "./sass/sections/Contact.scss";
 @import "./sass/sections/Video.scss";
