add two new components to app

--- a/src/main.scss
+++ b/src/main.scss
@@ -11,6 +11,9 @@
 @import "./sass/sections/MMdE_Slider.scss";
 @import "./sass/sections/MMdE_Chart.scss";
 @import "./sass/sections/MMdE_SubpageThree.scss";
+@import "./sass/sections/Chatbot_SubpageOne.scss";
+@import "./sass/sections/Chatbot_SubpageTwo.scss";
+
 
 @import "./sass/sections/Chatbot.scss";
 @import "./sass/sections/Contact.scss";
