add two new components to app

--- a/src/sass/sections/Chatbot_SubpageOne.scss
+++ b/src/sass/sections/Chatbot_SubpageOne.scss
@@ -15,20 +15,10 @@
     .Chatbot_SubpageOne__title {
         font-size: 1.8rem;
         // font-size: 22px; 
-
+        text-align: center;
         font-weight: bold;
         color: $text-color-violet;
         padding-bottom: 6px;
-    }
-
-    .Chatbot_SubpageOne__subtitle {
-        font-size: 1.6rem;
-        // margin-bottom: 60px; 
-    }
-
-    .Chatbot_SubpageOne__title,
-    .Chatbot_SubpageOne__subtitle {
-        text-align: center;
     }
 }
 
@@ -41,21 +31,14 @@
     flex-direction: column;
     align-items: center;
     letter-spacing: 0.02rem;
+    margin-bottom: 19px;
 
-    margin-top: 19px;
     // margin-bottom: $margin-sections; 
-
     span {
-        // 
-        color: $text-color-white;
-        background-color: $text-color-violet;
 
+        font-size: 1.8rem;
         padding: 5px 5px;
-        margin: 2px 0;
-
-        border: 2px solid $text-color-violet;
         border-radius: 5px;
-
     }
 }
 
