fix button show more

--- a/src/main.scss
+++ b/src/main.scss
@@ -13,7 +13,7 @@
 @import "./sass/sections/MMdE_SubpageThree.scss";
 @import "./sass/sections/Chatbot_SubpageOne.scss";
 @import "./sass/sections/Chatbot_SubpageTwo.scss";
-
+@import "./sass/sections/ButtonShowMore.scss";
 
 @import "./sass/sections/Chatbot.scss";
 @import "./sass/sections/Contact.scss";
