add functionality to button 'show more / show less'

--- a/src/main.scss
+++ b/src/main.scss
@@ -14,6 +14,8 @@
 @import "./sass/sections/Chatbot_SubpageOne.scss";
 @import "./sass/sections/Chatbot_SubpageTwo.scss";
 @import "./sass/sections/ButtonShowMore.scss";
+@import "./sass/sections/ButtonShowLess.scss";
+
 
 @import "./sass/sections/Chatbot.scss";
 @import "./sass/sections/Contact.scss";
