add animation to button

--- a/src/main.scss
+++ b/src/main.scss
@@ -3,6 +3,7 @@
 
 @import "./sass/settings/all";
 @import "./sass/settings/colors";
+@import "./sass/general/animations";
 
 @import "./sass/sections/Navigation.scss";
 @import "./sass/sections/Choice.scss";
