--- a/src/sass/sections/MMdE.scss
+++ b/src/sass/sections/MMdE.scss
@@ -66,7 +66,7 @@
     .Scheme-first__arrows {
         top: -1px !important;
         right: 31px !important;
-        transform: rotate(130deg)
+        transform: rotate(130deg) !important;
     }
 
     // border: 1px solid green; 
@@ -82,7 +82,7 @@
     .Scheme-first__arrows {
         top: -1px !important;
         left: 31px !important;
-        transform: rotate(40deg)
+        transform: rotate(40deg) !important;
     }
 
     // border: 1px solid yellow; 
