--- a/src/sass/general/_configuration.scss
+++ b/src/sass/general/_configuration.scss
@@ -16,6 +16,7 @@ $container-max-width: 1000px;
     padding-left: $gutter;
     padding-right: $gutter;
     position: relative; 
+    
     // background-color: green;
 
     .row {
@@ -38,4 +39,7 @@ $container-max-width: 1000px;
             @include grid(12);
         }
     }
+}
+section.contShadow{
+    box-shadow: 0px 13px 5px 0px rgba(0,0,0,0.75);
 }
