--- a/src/sass/sections/MMdE_Slider.scss
+++ b/src/sass/sections/MMdE_Slider.scss
@@ -7,6 +7,7 @@
     align-items: center; 
 
     margin-top: $margin-sections;
+    margin-bottom: 40px;
 }
 .MMdE_Slider__description {
     // margin-bottom: 40px;
